--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9QHTYGSX49"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-9QHTYGSX49');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TBE G.K. - Employer of Record & Back Office Services for Japan | Simplifying Japanese Operations</title>
@@ -67,9 +75,7 @@
         "addressCountry": "JP"
       },
       "url": "https://www.tbe-japan.com",
-      "telephone": "+81-3-XXXX-XXXX",
       "email": "contact@tbe-japan.com",
-      "priceRange": "$",
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
         "dayOfWeek": [
