Add staggered animation delay to service cards
Implement staggered animation delay for service cards.

--- a/index.html
+++ b/index.html
@@ -1206,6 +1206,11 @@
             observer.observe(element);
         });
 
+        // Add staggered animation delay to service cards
+        document.querySelectorAll('.service-card').forEach((card, index) => {
+            card.style.animationDelay = `${index * 0.2}s`;
+        });
+        
         // Add staggered animation delay to benefits
         document.querySelectorAll('.benefit').forEach((benefit, index) => {
             benefit.style.animationDelay = `${index * 0.1}s`;
