Fix footer links
Updated footer links.

--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,7 @@
                 <h4>Services</h4>
                 <ul>
                     <li><a href="#services">Employer of Record</a></li>
+                    <li><a href="#services">Recruiting Process Outsourcing</a></li>
                     <li><a href="#services">Back Office Outsourcing</a></li>
                 </ul>
             </div>
@@ -1210,7 +1211,7 @@
         document.querySelectorAll('.service-card').forEach((card, index) => {
             card.style.animationDelay = `${index * 0.2}s`;
         });
-        
+
         // Add staggered animation delay to benefits
         document.querySelectorAll('.benefit').forEach((benefit, index) => {
             benefit.style.animationDelay = `${index * 0.1}s`;
